--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.3",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "5.21.1",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -19,16 +20,16 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@tanstack/react-query": "^5.59.19",
+    "@tanstack/react-query": "^5.59.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jotai": "^2.10.1",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "15.0.3",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "socket.io": "^4.8.1",
@@ -38,15 +39,15 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.17.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.2",
-    "postcss": "^8",
-    "prisma": "^5.21.1",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.47",
+    "prisma": "^5.22.0",
+    "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
