--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ts-node server.ts",
     "build": "next build",
-    "start": "NODE_ENV=production ts-node server.ts",
+    "start": "NODE_ENV=production npx prisma migrate deploy && ts-node server.ts",
     "lint": "next lint"
   },
   "dependencies": {
@@ -29,8 +29,8 @@
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19",
+    "react-dom": "^19",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "socket.io": "^4.8.1",
@@ -41,8 +41,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "eslint": "^8.57.1",
