--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "eslint-plugin-redos": "^4.4.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
