--- a/package.json
+++ b/package.json
@@ -1,64 +1,69 @@
 {
-  "name": "family-stock",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "NODE_ENV=production npx prisma migrate deploy && next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
-    "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "5.21.1",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-collapsible": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@radix-ui/react-visually-hidden": "^1.1.1",
-    "@tanstack/react-query": "^5.62.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "jotai": "^2.10.4",
-    "lucide-react": "^0.454.0",
-    "next": "15.1.2",
-    "next-auth": "^4.24.11",
-    "next-themes": "^0.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.1",
-    "react-icons": "^5.4.0",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.17.10",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "@typescript-eslint/parser": "^8.18.1",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.2",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-redos": "^4.4.5",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.10",
-    "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.17",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
-  }
+    "name": "family-stock",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "NODE_ENV=production npx prisma migrate deploy && next start",
+        "lint": "next lint",
+        "api": "bun run --hot api/src/index.ts"
+    },
+    "dependencies": {
+        "@auth/core": "^0.37.4",
+        "@auth/prisma-adapter": "^2.7.4",
+        "@hono/auth-js": "^1.0.15",
+        "@hookform/resolvers": "^3.9.1",
+        "@prisma/client": "5.21.1",
+        "@radix-ui/react-checkbox": "^1.1.3",
+        "@radix-ui/react-collapsible": "^1.1.2",
+        "@radix-ui/react-dialog": "^1.1.4",
+        "@radix-ui/react-dropdown-menu": "^2.1.4",
+        "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-select": "^2.1.4",
+        "@radix-ui/react-separator": "^1.1.1",
+        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-tabs": "^1.1.2",
+        "@radix-ui/react-toast": "^1.2.4",
+        "@radix-ui/react-tooltip": "^1.1.6",
+        "@radix-ui/react-visually-hidden": "^1.1.1",
+        "@tanstack/react-query": "^5.62.8",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "hono": "^4.7.1",
+        "jotai": "^2.10.4",
+        "lucide-react": "^0.454.0",
+        "next": "15.1.2",
+        "next-auth": "^4.24.11",
+        "next-themes": "^0.3.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-hook-form": "^7.54.1",
+        "react-icons": "^5.4.0",
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1",
+        "tailwind-merge": "^2.5.5",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.24.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20.17.10",
+        "@types/bun": "latest",
+        "@types/react": "^19.0.1",
+        "@types/react-dom": "^19.0.2",
+        "@typescript-eslint/eslint-plugin": "^8.18.1",
+        "@typescript-eslint/parser": "^8.18.1",
+        "eslint": "^8.57.1",
+        "eslint-config-next": "15.0.2",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-redos": "^4.4.5",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "postcss": "^8.4.49",
+        "prettier": "^3.4.2",
+        "prettier-plugin-tailwindcss": "^0.6.10",
+        "prisma": "^5.22.0",
+        "tailwindcss": "^3.4.17",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.7.2"
+    }
 }
