--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@auth/core": "^0.37.4",
         "@auth/prisma-adapter": "^2.7.4",
         "@hono/auth-js": "^1.0.15",
+        "@hono/zod-validator": "^0.4.3",
         "@hookform/resolvers": "^3.10.0",
         "@prisma/client": "5.21.1",
         "@radix-ui/react-checkbox": "^1.1.4",
