--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "next build",
         "start": "NODE_ENV=production next start",
         "lint": "next lint",
-        "api": "bun run --hot api/src/index.ts"
+        "api": "bun run --hot api/src/index.ts",
+	"startApi": "bunx prisma generate deploy && bun run api/src/index.ts"
     },
     "dependencies": {
         "@auth/core": "^0.37.4",
