--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,24 +1,26 @@
-# Frontend Dockerfile (Next.js)
-FROM oven/bun:latest AS frontend
+# Use official Node.js image as the base
+FROM node:18 AS frontend
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the lockfile and package.json for dependency resolution first
-# This ensures that dependencies are installed only when they change, optimizing caching
-COPY bun.lock package.json ./
+# Copy package.json and package-lock.json first for better caching
+COPY package.json package-lock.json ./
 
-# Install dependencies using Bun
-RUN bun install --frozen-lockfile
+# Install dependencies using npm
+RUN npm ci --omit=dev
 
 # Copy the rest of the application source code to the container
 COPY . .
-RUN bunx prisma generate
+
+# Generate Prisma client
+RUN npx prisma generate
+
 # Build the Next.js application to optimize performance
-RUN bun run build
+RUN npm run build
 
 # Expose the frontend port (3000)
 EXPOSE 3000
 
 # Start the Next.js frontend
-CMD ["bun", "start"]
+CMD ["npm", "run", "start"]
