--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY bun.lock package.json ./
 
 # Install dependencies using Bun
-RUN bun install --frozen-lockfile
+RUN bun install 
 
 # Copy the rest of the application source code to the container
 COPY . .
