--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,26 +1,27 @@
-# Use official Node.js image as the base
-FROM node:18 AS frontend
+# Frontend Dockerfile (Next.js)
+FROM oven/bun:latest AS frontend
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json first for better caching
-COPY package.json package-lock.json ./
+# Copy the lockfile and package.json for dependency resolution first
+# This ensures that dependencies are installed only when they change, optimizing caching
+COPY package.json ./
 
-# Install dependencies using npm
-RUN npm ci --omit=dev
+# Install dependencies using Bun
+RUN bun install
 
 # Copy the rest of the application source code to the container
 COPY . .
 
-# Generate Prisma client
-RUN npx prisma generate
+RUN bunx prisma generate
 
 # Build the Next.js application to optimize performance
-RUN npm run build
+RUN bun run build
 
 # Expose the frontend port (3000)
 EXPOSE 3000
 
 # Start the Next.js frontend
-CMD ["npm", "run", "start"]
+CMD ["bun", "run", "start"]
+
