--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "@hono/auth-js": "^1.0.15",
         "@hono/zod-validator": "^0.4.3",
         "@hookform/resolvers": "^3.10.0",
-        "@prisma/client": "5.21.1",
+        "@prisma/client": "^6.4.1",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
@@ -49,8 +49,8 @@
         "zod": "^3.24.2"
     },
     "devDependencies": {
-        "@types/node": "^20.17.19",
         "@types/bun": "latest",
+        "@types/node": "^20.17.19",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@typescript-eslint/eslint-plugin": "^8.24.1",
@@ -63,7 +63,7 @@
         "postcss": "^8.5.2",
         "prettier": "^3.5.1",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "prisma": "^5.22.0",
+        "prisma": "^6.4.1",
         "tailwindcss": "^3.4.17",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3"
