API起動スクリプトを修正し、Prismaマイグレーションをデプロイするように変更

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "next start",
         "lint": "next lint",
         "api": "bun run --hot api/src/index.ts",
-        "startApi": "bunx prisma generate deploy && bun run api/src/index.ts"
+        "startApi": "bunx prisma migrate deploy && bun run api/src/index.ts"
     },
     "dependencies": {
         "@auth/core": "^0.37.4",
