--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@hono/zod-validator": "^0.4.3",
         "@hookform/resolvers": "^3.10.0",
         "@prisma/client": "^6.4.1",
+        "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
