--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@auth/core": "^0.37.4",
         "@auth/prisma-adapter": "^2.7.4",
+        "@dalet-oss/lexorank": "^1.1.0",
         "@hono/auth-js": "^1.0.15",
         "@hono/zod-validator": "^0.4.3",
         "@hookform/resolvers": "^3.10.0",
