--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
         "lucide-react": "^0.454.0",
         "next": "15.1.2",
         "next-auth": "^4.24.11",
-        "next-themes": "^0.3.0",
+        "next-themes": "^0.4.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
         "react-icons": "^5.5.0",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
+        "sonner": "^2.0.1",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.24.2"
