--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
         "@radix-ui/react-toast": "^1.2.6",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@radix-ui/react-visually-hidden": "^1.1.2",
+        "@tailwindcss/typography": "^0.5.16",
         "@tanstack/react-query": "^5.66.7",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "hono": "^4.7.2",
         "jotai": "^2.12.1",
         "lucide-react": "^0.454.0",
+        "microcms-js-sdk": "^3.1.2",
         "next": "15.1.2",
         "next-auth": "^4.24.11",
         "next-themes": "^0.4.4",
